...
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_start_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_start_login"
        android:layout_alignLeft="@id/google_sign_in_button"
        android:layout_alignRight="@id/google_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/new_account" />

...
