<resources>
    <string name="app_name">TeamChat</string>

    <!-- General Strings -->
    <string name="send">Send</string>
    <string name="cancle">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="yes">YES</string>

    <!-- Info Strings -->
    <string name="datefuture">Date has to be in the future!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_account">New Account</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>

    <!-- Strings related to Chats -->
    <string name="newEvent">Create Event</string>
    <string name="editChat">Edit Chat</string>
    <string name="editChatGroupnameHint">Group Name</string>
    <string name="newChat">New Chat</string>
    <string name="createChat">Create Chat</string>
    <string name="updateChat">Update Chat</string>
    <string name="leaveChat">Leave Chat</string>
    <string name="acceptLeaveChat">Are you sure, you want to leave the Chat?</string>
    <string name="noMsgInChat">There are No Messages in this Chat yet.</string>
    <string name="chatName">Name of the Chat</string>
    <string name="lastMsgDate">Date of the last Message</string>

    <!-- Strings related to User -->
    <string name="first_name">First Name</string>
    <string name="reg_name">Name</string>

    <!-- Strings related to User Search -->
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <!-- Strings related to Bottom NavBar -->
    <string name="nav_chats">Chats</string>
    <string name="nav_events">Events</string>
    <string name="nav_contacts">Contacts</string>
    <string name="chat_delete">Delete Chat</string>
    <string name="chat_cancel_delete">Delete nothing</string>

    <!-- Strings related to Events or View Event -->
    <string name="event_delete">Delete Event</string>
    <string name="dialog_delete_event_title">Delete the Event</string>
    <string name="dialog_delete_event_msg">Are you sure you want to delete this event?</string>
    <string name="dialog_reason_hint">Reason...</string>
    <string name="cancelled">Cancelled</string>
    <string name="event_title">Event Title:</string>
    <string name="event_date_time">Date and Time:</string>
    <string name="event_description">Description:</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="status_of_group_members">Status of Group Members</string>
    <string name="viewEvent_commit">commit</string>
    <string name="viewEvent_cancel">cancel</string>
    <string name="viewEvent_committed">committed</string>
    <string name="viewEvent_yourStatus">Your status:</string>

    <!-- Strings related to Contact Details -->
    <string name="common_groups">Common groups</string>
    <string name="send_email">Send Email</string>
    <string name="deleteUser">Delete Contact from List</string>


</resources>
