...
            android:hint="Message ..."
            android:inputType="textAutoCorrect"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/lvMessages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_layout_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
...
